--- a/App/index.html
+++ b/App/index.html
@@ -17,10 +17,17 @@
 <body>
     <!-- DOM -->
     <main class='d-flex'>
-        <aside id='mainAside' class='M0-main-aside position-fixed~ cM0-bg-dark'></aside>
+        <!-- side menu -->
+        <aside id='mainAside' class='M0-main-aside cM0-bg-dark'></aside>
+        <!-- Body Section -->
         <section class='d-flex flex-column w-100'>
-            <nav class='M0-main-nav'></nav>
-            <main class='M0-master-container bg-success'></main>
+            <!-- Search Bar -->
+            <nav class='M0-main-nav bg-warning'>
+                Hello Nav
+            </nav>
+            <!-- Components -->
+            <main id='masterContainer' class='M0-master-container bg-success~'>
+            </main>
         </section>
     </main>
     <!-- scripts -->
@@ -36,7 +43,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
             crossorigin="anonymous"></script>
-    <script src='view/app.js'></script>
     <script src='view/mainAside.js'></script>
+    <script type="module" src='view/app.js'></script>
+    <script src='view/pages/task.page.js'></script>
 </body>
 </html>
