--- a/App/index.html
+++ b/App/index.html
@@ -26,7 +26,7 @@
                 Hello Nav
             </nav>
             <!-- Components -->
-            <main id='masterContainer' class='M0-master-container bg-success~'>
+            <main id='masterContainer' class='M0-master-container px-5'>
             </main>
         </section>
     </main>
@@ -45,6 +45,5 @@
             crossorigin="anonymous"></script>
     <script src='view/mainAside.js'></script>
     <script type="module" src='view/app.js'></script>
-    <script src='view/pages/task.page.js'></script>
 </body>
 </html>
